# LightMem

./: pyproject-mcp-light.toml  pyproject.toml
.claude/skills/: memory.md  recall.md  remember.md
docs/: TECHNICAL_SUMMARY.md
src/lightmem/configs/retriever/embeddingretriever/: qdrant.py
src/lightmem/factory/retriever/embeddingretriever/: qdrant.py
src/lightmem/mcp/: README.md  __init__.py  example.json  server.py
src/lightmem/memory/: lightmem.py  utils.py
src/lightmem/memory_toolkits/memories/layers/baselines/mem0/configs/vector_stores/: qdrant.py
