[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightmem"
version = "0.1.0"
description = "LightMemory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["llm", "memory", "compression", "retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies with flexible versions for broader compatibility
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "accelerate>=0.20.0",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "llmlingua>=0.2.0",
    "qdrant-client>=1.6.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.0",
    "tokenizers>=0.14.0",
    "huggingface-hub>=0.17.0",
    "safetensors>=0.4.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "httpx>=0.24.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
llms = [
    "ollama==0.6.0",
    "vllm==0.11.0",
]
mcp = [
    "fastmcp==2.13.1",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]


[project.scripts]
lightmem-mcp = "lightmem.mcp.server:main"

[project.urls]
Homepage = "https://github.com/zjunlp/LightMem"
Repository = "https://github.com/zjunlp/LightMem"
Documentation = "https://github.com/zjunlp/LightMem/blob/main/README.md"

# Src layout configuration for setuptools
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]
